--- a/public/angular/views/pdf-comment.html
+++ b/public/angular/views/pdf-comment.html
@@ -63,7 +63,7 @@
                     </div>
                     <div class="box-footer">
                         <div class="replyControl">
-                            <a ng-show="comment.isAuthor"
+                            <a ng-show="(comment.isAuthor || isAdmin)"
                                ng-click="removeComment(comment._id)"
                                title="delete"
                                class="cursor btn btn-danger btn-xs">DELETE</a>
