--- a/views/admin-lte/links/links.ejs
+++ b/views/admin-lte/links/links.ejs
@@ -23,16 +23,24 @@
                         ng-hide="bookmark.isDeleted"
                         ng-click="initiateLink(bookmark.link._id)"
                             >
-                        <h4> {{bookmark.link.title}} </h4>
+                        <div class="row">
+                            <div class="col-xs-1">
+                                <voting vote-type="link" vote-type-id="{{bookmark.link._id}}" vote-value=""></voting>
+                            </div>
+                            <div class="col-xs-11">
+                                <h4> {{bookmark.link.title}} </h4>
 
-                        <br class="clear">
-                        <a class="btn btn-primary btn-xs open-new-tab" title="Open in a New Tab" href="{{bookmark.link.content}}" target="_blank">
-                            <i class="fa fa-external-link"></i> Open in a new tab</a>
-                        <br class="clear">
-                        <span class="posted-at">
-                            Posted <strong>{{bookmark.link.dateAdded | relativeDate}}</strong>
-                            By <strong>{{bookmark.createdBy.displayName}}</strong>
-                        </span>
+                                <br class="clear">
+                                <a class="btn btn-primary btn-xs open-new-tab" title="Open in a New Tab"
+                                   href="{{bookmark.link.content}}" target="_blank">
+                                    <i class="fa fa-external-link"></i> Open in a new tab</a>
+                                <br class="clear">
+                                <span class="posted-at">
+                                    Posted <strong>{{bookmark.link.dateAdded | relativeDate}}</strong>
+                                    By <strong>{{bookmark.createdBy.displayName}}</strong>
+                                </span>
+                            </div>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -48,7 +56,7 @@
                 <div ng-show="currentLink" class="currentTopic">
                     <div class="box box-solid">
                         <div class="box-body">
-                             <!--<iframe ng-src="{{currentLinkUrl}}" class="link" frameborder="0"></iframe>-->
+                            <!--<iframe ng-src="{{currentLinkUrl}}" class="link" frameborder="0"></iframe>-->
                         </div>
                     </div>
                 </div>
