--- a/views/admin-lte/catalogs/editCourseModal.ejs
+++ b/views/admin-lte/catalogs/editCourseModal.ejs
@@ -82,7 +82,9 @@
                                              ng-model="filespicture" ngf-multiple="false" ngf-max-size='1000000'><i
                                                     class="ionicons ion-image"></i> &nbsp; Select a picture
                                         </div>
-                                        &nbsp; <span ng-repeat="f in filespicture">{{f.name}}</span>
+                                        <div class="label label-info" ng-show="filespicture"><br>
+                                            &nbsp; <span>{{filespicture.name}}</span>
+                                        </div>
 
                                         <div ng-show="courseEdit.picture">
                                             <p class="help-block" ng-show="courseEdit.picture">or delete the picture</p>
@@ -111,7 +113,9 @@
                                              ng-model="filesvideo" ngf-multiple="false" ngf-max-size='100000000'><i
                                                     class="`"></i> &nbsp; Select a video file
                                         </div>
-                                        &nbsp; <span ng-repeat="f in filesvideo">{{f.name}}</span>
+                                        <div class="label label-info" ng-show="filesvideo"><br>
+                                            <span>{{filesvideo.name}}</span>
+                                        </div>
 
                                         <div ng-show="courseEdit.video">
                                             <p class="help-block" ng-show="courseEdit.video">or delete the video</p>
