--- a/views/admin-lte/profiles/editAccountModal.ejs
+++ b/views/admin-lte/profiles/editAccountModal.ejs
@@ -11,7 +11,7 @@
 
                             <div class="box-tools pull-right">
                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-                                        aria-hidden="true">&times;</span></button>
+                                            aria-hidden="true">&times;</span></button>
                             </div>
                         </div>
                         <div class="box-body">
@@ -104,7 +104,10 @@
 
                                             <div class="callout callout-info">
                                                 <p>Your image is obtained from Gravatar API.<br>
-                                                Please visit this <a href="https://en.gravatar.com/support/activating-your-account/" target="_blank"> Gravatar's page</a> to get more info on how to upload or edit your image.
+                                                    Please visit this <a
+                                                            href="https://en.gravatar.com/support/activating-your-account/"
+                                                            target="_blank"> Gravatar's page</a> to get more info on how
+                                                    to upload or edit your image.
                                                 </p>
                                             </div>
 
@@ -114,7 +117,7 @@
 
                                     <div class="control-group">
                                         <br class="clear">
-                                        <span class="help-block" ng-show="errors">{{ errors }}</span>
+                                        <error-block ng-show="errors.length > 0" messages="errors"></error-block>
                                         <!-- Button -->
                                         <div class="controls">
                                             <button class="btn btn-md btn-primary">Save</button>
