--- a/public/video-annotations/styles/styles.css
+++ b/public/video-annotations/styles/styles.css
@@ -101,6 +101,7 @@ video-annotation.default {
 
 vg-scrub-bar-cue-points.default .cue-point {
     background-color: yellow !important;
+    opacity: 0.1 !important;
 }
 
 videogular-container {
@@ -137,13 +138,13 @@ videogular .fp-timeline {
     top: -3px;
 }
 
-videogular .fp-scale-holder, 
+videogular .fp-scale-holder,
 videogular .fp-btn,
 videogular .fp-tooltip {
     color: #FFF;
-    background-color: rgba(30,30,30,0.6);
+    background-color: rgba(30, 30, 30, 0.6);
 }
 
 videogular .fp-tooltip-arrow {
-    border-top-color: rgba(30,30,30,0.6);
+    border-top-color: rgba(30, 30, 30, 0.6);
 }
