--- a/frontend-modules/angular/views/nodeDetail/pdf-annotation-zone.html
+++ b/frontend-modules/angular/views/nodeDetail/pdf-annotation-zone.html
@@ -1,4 +1,4 @@
-<div movable-pdf="" can-move="{{canMove}}" on-moved="update-ann-zone-pos" ng-hide="(switchShowAnnoZones == 'Off')" id={{annZoneID}} class="slideRect1" position="absolute" opacity={{opacityFactorHighlight}} data-tagName={{tagName}} data-relstartcoord="{{dataRelCoord}}" style="position:absolute;background-color:#{{color}};'transition': 'background 0.1s linear'" ng-style="{'top' : absPosY}">
+<div movable-pdf="" can-move="{{canMove}}" on-moved="update-ann-zone-pos" ng-hide="(switchShowAnnoZones == 'Off')" id={{annZoneID}} class="slideRect1" position="absolute" opacity={{opacityFactorHighlight}} data-tagName={{tagName}} data-relstartcoord="{{dataRelCoord}}" style="position:absolute;background-color:#{{color}};'transition': 'background 0.1s linear'" ng-style="positionStyle">
   {{absPosY}}
   <div id ="caRect-{{divCounter}}" class="caRect" style= "width:'100%';height:'100%'" ng-click="addReference(annZoneID)">
     <div  ng-hide="!dragable">
